MyWebSite/wwwroot/css/site.css
/* ... */
.footer-dark .item.text {
    margin-bottom: 36px;
}

@media (max-width:767px) {
    .footer-dark .item.text {
        margin-bottom: 0;
    }
}

.footer-dark .item.text p {
    opacity: 0.6;
    margin-bottom: 0;
}

.footer-dark .item.social {
    text-align: center;
}

@media (max-width:991px) {
    .footer-dark .item.social {
        text-align: center;
        margin-top: 20px;
    }
}

.footer-dark .item.social > a {
    font-size: 20px;
    width: 36px;
    height: 36px;
    line-height: 36px;
    display: inline-block;
    text-align: center;
    border-radius: 50%;
    box-shadow: 0 0 0 1px rgba(255,255,255,0.4);
    margin: 0 8px;
    color: #fff;
    opacity: 0.75;
}

    .footer-dark .item.social > a:hover {
        opacity: 0.9;
    }

.footer-dark .copyright {
    text-align: center;
    padding-top: 24px;
    opacity: 0.3;
    font-size: 13px;
    margin-bottom: 0;
}






/********************************************************************


                      FORMSPREE FORM GUESTBOOK


*********************************************************************/

@import url(https://fonts.googleapis.com/css?family=Prosto+One);

* {
    -webkit-transition: all 0.3s ease;
}

body {
/*    overflow: hidden;*/
    margin: 0px;
    padding: 0px;
    font-family: 'Prosto One', cursive;
    background: url('https://subtlepatterns.com/patterns/egg_shell.png');
    _background: #eee;
}

#login-form {
    color: #777;
    border: 0px solid #afafaf;
    width: 30%;
    margin-left: 35%;
    margin-top: 120px;
    text-align: left;
    padding: 40px;
    padding-top: 20px;
    border-radius: 3px;
    box-shadow: 0px 0px 8px #777;
    background: rgba(255, 255, 255, 0.6);
    background-color: #84b7ce;
}

/*input {
    color: #777;
    font-weight: bold;
    width: 70%;
    padding: 10px;
    margin: 10px;
    border: 1px solid #afafaf;
    border-radius: 3px;
    background: rgba(255, 255, 255, 0.5);
    outline: none;
}*/

    input[type="button"] {
        color: white;
        width: 30%;
        border: 0px solid transparent;
        outline: none;
        cursor: pointer;
    }

/*#login {
    background: #51AC74;
}

#register {
    background: #5C8AE6;
}*/

/********************************************************************


                      CONTACT FORM


*********************************************************************/

.center {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 200px;
    border: 3px solid green;
}

